add article title and image to news article page

--- a/ficha1/ex1/article.html
+++ b/ficha1/ex1/article.html
@@ -32,7 +32,9 @@ The news article page has one particular news item in its complete form. It also
         <main>
             <!-- article per se -->
             <article>
+                <!-- article title -->
                 <h2>Lorem Ipsum</h2>
+                <img src="https://picsum.photos/seed/picsum/300" alt="article image">
                 <p>
                     Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibendum mi. Aenean tincidunt maximus orci, at ultricies tortor rutrum nec. Praesent sed nulla id massa consectetur sagittis. Aliquam iaculis lobortis vehicula. In hac habitasse platea dictumst. Maecenas pulvinar justo ac ante sagittis convallis. Donec interdum mi enim, eu euismod dolor cursus vel.
                 </p>
