refactor article structure in main page for improved readability

--- a/ficha1/ex1/all.html
+++ b/ficha1/ex1/all.html
@@ -33,20 +33,25 @@ The main page represents the main page of the newspaper having a series of abbre
         <!-- content -->
         <main>
             <!-- articles -->
+            <!-- article 1 -->
             <article>
-                <!-- article 1 -->
-                <article>
+                <h2>
+                    <a href="article.html">Lorem Ipsum</a>
+                </h2>
+                <p>
+                    Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
+                    <a href="article.html">Read more</a>
+                </p>
 
-                </article>
+            </article>
 
-                <!-- article 2 -->
-                <article>
+            <!-- article 2 -->
+            <article>
 
-                </article>
-                <!-- article 3 -->
-                <article>
+            </article>
+            <!-- article 3 -->
+            <article>
 
-                </article>
             </article>
         </main>
 
