add article footers and update copyright notice for consistency

--- a/ficha1/ex1/article.html
+++ b/ficha1/ex1/article.html
@@ -48,7 +48,7 @@ The news article page has one particular news item in its complete form. It also
                 </p>
 
                 <footer>
-                    Written by Joe Bloggs on DD/MM/YYYY 
+                    Written by Joe Bloggs on <time>DD/MM/YYYY</time> 
                 </footer>
             </article>
 
@@ -65,7 +65,7 @@ The news article page has one particular news item in its complete form. It also
                 <article>
                     <h4>janedoe</h4>
                     <h5>Ut in interdum risus. Duis fermentum scelerisque ex venenatis fringilla.</h5>
-                    <h6>posted on DD/MM/YYYY</h6>
+                    <h6>posted on <time>DD/MM/YYYY</time></h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibendum mi.</p>
                 </article>
 
@@ -85,7 +85,7 @@ The news article page has one particular news item in its complete form. It also
 
         <!-- footer -->
         <footer>
-            <p>All rights reserved. Copyright &copy;</p>
+            <p>All rights reserved to LM News. Copyright &copy;</p>
         </footer>
     </body>
 </html>
