--- a/ficha1/ex1/section.html
+++ b/ficha1/ex1/section.html
@@ -35,7 +35,7 @@ The section page is very similar to the main page, but only has news about a par
 
         <!-- footer -->
         <footer>
-            <p>All rights reserved. Copyright &copy;</p>
+            <p>All rights reserved to LM News. Copyright &copy;</p>
         </footer>
     </body>
 </html>
