--- a/ficha1/ex1/all.html
+++ b/ficha1/ex1/all.html
@@ -42,22 +42,41 @@ The main page represents the main page of the newspaper having a series of abbre
                     Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
                     <a href="article.html">Read more</a>
                 </p>
-
+                <footer>
+                    Written by Jane Bloggs on <time>DD/MM/YYYY</time> 
+                </footer>
             </article>
 
-            <!-- article 2 -->
+            <!-- article 2. for now it points to the same article -->
             <article>
-
+                <h2>
+                    <a href="article.html">Lorem Ipsum</a>
+                </h2>
+                <p>
+                    Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
+                    <a href="article.html">Read more</a>
+                </p>
+                <footer>
+                    Written by Jack Bloggs on <time>DD/MM/YYYY</time> 
+                </footer>
             </article>
-            <!-- article 3 -->
+            <!-- article 3. for now it points to the same article -->
             <article>
-
+                <h2>
+                    <a href="article.html">Lorem Ipsum</a>
+                </h2>
+                <p>
+                    Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
+                </p>
+                <footer>
+                    Written by Joe Bloggs on <time>DD/MM/YYYY</time> 
+                </footer>
             </article>
         </main>
 
         <!-- footer -->
         <footer>
-            <p>All rights reserved. Copyright &copy;</p>
+            <p>All rights reserved to LM News. Copyright &copy;</p>
         </footer>
     </body>
 </html>
