add articles section with multiple entries and authors (finished ex1)

--- a/ficha1/ex1/section.html
+++ b/ficha1/ex1/section.html
@@ -17,6 +17,9 @@ The section page is very similar to the main page, but only has news about a par
             <h1>
                 <a href="all.html">LM News</a>
             </h1>
+            <h2>
+                <a href="all.html">Sports/Politics/Local Section</a>
+            </h2>
         </header>
     
         <!-- navigation menu -->
@@ -30,7 +33,46 @@ The section page is very similar to the main page, but only has news about a par
 
         <!-- content -->
         <main>
+            <!-- articles -->
+            <!-- article 1 -->
+            <article>
+                <h2>
+                    <a href="article.html">Lorem Ipsum</a>
+                </h2>
+                <p>
+                    Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
+                    <a href="article.html">Read more</a>
+                </p>
+                <footer>
+                    Written by Jane Bloggs on <time>DD/MM/YYYY</time> 
+                </footer>
+            </article>
 
+            <!-- article 2. for now it points to the same article -->
+            <article>
+                <h2>
+                    <a href="article.html">Lorem Ipsum</a>
+                </h2>
+                <p>
+                    Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
+                    <a href="article.html">Read more</a>
+                </p>
+                <footer>
+                    Written by Jack Bloggs on <time>DD/MM/YYYY</time> 
+                </footer>
+            </article>
+            <!-- article 3. for now it points to the same article -->
+            <article>
+                <h2>
+                    <a href="article.html">Lorem Ipsum</a>
+                </h2>
+                <p>
+                    Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
+                </p>
+                <footer>
+                    Written by Joe Bloggs on <time>DD/MM/YYYY</time> 
+                </footer>
+            </article>
         </main>
 
         <!-- footer -->
