update unecessary time tag

--- a/ficha1/ex1/all.html
+++ b/ficha1/ex1/all.html
@@ -43,7 +43,7 @@ The main page represents the main page of the newspaper having a series of abbre
                     <a href="article.html">Read more</a>
                 </p>
                 <footer>
-                    Written by Jane Bloggs on <time>DD/MM/YYYY</time> 
+                    <p>Written by Jane Bloggs on DD/MM/YYYY</p> 
                 </footer>
             </article>
 
@@ -57,7 +57,7 @@ The main page represents the main page of the newspaper having a series of abbre
                     <a href="article.html">Read more</a>
                 </p>
                 <footer>
-                    Written by Jack Bloggs on <time>DD/MM/YYYY</time> 
+                    <p>Written by Jane Bloggs on DD/MM/YYYY</p>
                 </footer>
             </article>
             <!-- article 3. for now it points to the same article -->
@@ -69,7 +69,7 @@ The main page represents the main page of the newspaper having a series of abbre
                     Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
                 </p>
                 <footer>
-                    Written by Joe Bloggs on <time>DD/MM/YYYY</time> 
+                    <p>Written by Jane Bloggs on DD/MM/YYYY</p>
                 </footer>
             </article>
         </main>
