--- a/ficha1/ex1/article.html
+++ b/ficha1/ex1/article.html
@@ -48,7 +48,7 @@ The news article page has one particular news item in its complete form. It also
                 </p>
 
                 <footer>
-                    Written by Joe Bloggs on <time>DD/MM/YYYY</time> 
+                    <p>Written by Jane Bloggs on DD/MM/YYYY</p>
                 </footer>
             </article>
 
@@ -65,7 +65,7 @@ The news article page has one particular news item in its complete form. It also
                 <article>
                     <h4>janedoe</h4>
                     <h5>Ut in interdum risus. Duis fermentum scelerisque ex venenatis fringilla.</h5>
-                    <h6>posted on <time>DD/MM/YYYY</time></h6>
+                    <h6>posted on DD/MM/YYYY</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibendum mi.</p>
                 </article>
 
