--- a/ficha1/ex1/section.html
+++ b/ficha1/ex1/section.html
@@ -44,7 +44,7 @@ The section page is very similar to the main page, but only has news about a par
                     <a href="article.html">Read more</a>
                 </p>
                 <footer>
-                    Written by Jane Bloggs on <time>DD/MM/YYYY</time> 
+                    <p>Written by Jane Bloggs on DD/MM/YYYY</p>
                 </footer>
             </article>
 
@@ -58,7 +58,7 @@ The section page is very similar to the main page, but only has news about a par
                     <a href="article.html">Read more</a>
                 </p>
                 <footer>
-                    Written by Jack Bloggs on <time>DD/MM/YYYY</time> 
+                    <p>Written by Jane Bloggs on DD/MM/YYYY</p>
                 </footer>
             </article>
             <!-- article 3. for now it points to the same article -->
@@ -70,7 +70,7 @@ The section page is very similar to the main page, but only has news about a par
                     Dolor sit amet, consectetur adipiscing elit. Nunc eu erat ultricies purus mattis commodo. Integer porta elementum semper. Mauris non dapibus sapien. Duis volutpat, turpis nec ultricies venenatis, nisi leo luctus nibh, at consectetur ipsum justo vitae odio. Pellentesque ut enim ultricies, tristique ipsum vel, bibe...
                 </p>
                 <footer>
-                    Written by Joe Bloggs on <time>DD/MM/YYYY</time> 
+                    <p>Written by Jane Bloggs on DD/MM/YYYY</p> 
                 </footer>
             </article>
         </main>
