added validation image on ex2

--- a/ficha1/ex2/table.html
+++ b/ficha1/ex2/table.html
@@ -85,5 +85,7 @@
                 <td>10</td>
             </tr>
           </table>
+
+          <img src="pngfind.com-html-5-logo-png-3426331.png" alt="html validated" width="512">
     </body>
 </html>
